Test of reCaptcha

--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -16,7 +16,7 @@ nav{
 .nav-item{
     list-style-type: none;
     margin: 0 3vw;
-    font-size: 2vh;
+    font-size: 1.2rem;
     display: inline;
     text-shadow: 0.1em 0.1em 0.2em $dark-color;
 }
