--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ nav {
 .nav-item {
   list-style-type: none;
   margin: 0 3vw;
-  font-size: 2vh;
+  font-size: 1.2rem;
   display: inline;
   text-shadow: 0.1em 0.1em 0.2em #212529;
 }
