--- a/scss/components/_conocimientos.scss
+++ b/scss/components/_conocimientos.scss
@@ -1,76 +1,46 @@
-// Icono y parrafo
-  .knowledge-item {
-    padding: 5px 0;
-    font-size: 14px;
-    font-weight: 600;
-    text-align: left;
-    color: $white-color;
-    margin: 0 0 15px 20px;
-  }
-  .knowledge-item i {
-    font-size: 24px;
-    width: 40px;
-    height: 40px;
-    line-height: 40px;
-    background-color: $white-color;
-    text-align: center;
-    border-radius: 50%;
-    color: $yellow-color;
-    margin-right: 10px;
-  }
-
+//Description
  .description-knowledge{
-   margin: 20px 10%;
-   text-align: center;
- }
-  // Clase padre grid
-  .knowledge {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    grid-column-gap: 25px;
-    grid-row-gap: 25px;
-    margin: 0 10%;
-    
-    div:hover{
-      background-color: $yellow-color;
-      transition: all 1s;
-      border-radius: 5%;
-
-      .knowledge-item i{
-          background-color: $dark-color;
-          transition: all .8s;
-        }
-      
+  margin: 2% auto;
+  text-align: center;
+  width: 60%;
+}
+// Icono y parrafo
+.knowledge-item {
+  padding: 5px 0;
+  font-size: 14px;
+  font-weight: 600;
+  text-align: left;
+  color: $white-color;
+  margin: 0 0 15px 20px;
+    i {
+      font-size: 24px;
+      width: 40px;
+      height: 40px;
+      line-height: 40px;
+      background-color: $white-color;
+      text-align: center;
+      border-radius: 50%;
+      color: $yellow-color;
+      margin-right: 10px;
     }
+}
 
+//Cards
+.knowledge-father{
+  display: flex;
+  gap: 30px;
+  justify-content: space-around;
+  flex-flow: row wrap;
+  margin: auto;
+  width: 80%;
 
-    .web { grid-area: 1 / 1 / 2 / 2; background-color: $dark-bg;}
-    .progra { grid-area: 1 / 2 / 2 / 3; background-color: $dark-bg;}
-    .tec { grid-area: 2 / 1 / 3 / 2; background-color: $dark-bg; }
-    .games { grid-area: 2 / 2 / 3 / 3; background-color: $dark-bg;}
+  div{
+    background-color: $dark-bg;
+    border-radius: 5%;
+    box-shadow: 10px 15px 5px $dark;
+    text-align: center;
+    width: 300px;
+    height: 400px;
   }
 
-  .container-knowledge{
-    width: 90%;
-    margin: auto;
-  }
-    
-    
-
-@media only screen and (max-width: 700px) {
-  .knowledge {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(4, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 25px;
-
-    .web { grid-area: 1 / 1 / 2 / 2; }
-    .progra { grid-area: 2 / 1 / 3 / 2; }
-    .tec { grid-area: 3 / 1 / 4 / 2; }
-    .games { grid-area: 4 / 1 / 5 / 2; }
-  }
-    
-    
 }
