--- a/scss/styles.css
+++ b/scss/styles.css
@@ -635,11 +635,21 @@ p {
 .knowledge-father div {
   background-color: #161a1d;
   border-radius: 5%;
-  -webkit-box-shadow: 10px 15px 5px #000;
-          box-shadow: 10px 15px 5px #000;
+  -webkit-box-shadow: 10px 15px 50px #000;
+          box-shadow: 10px 15px 50px #000;
   text-align: center;
   width: 300px;
   height: 400px;
+}
+
+.knowledge-father div:hover {
+  background-color: #dfac13;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.knowledge-father div:hover p strong {
+  color: #efefef;
 }
 
 /* width */
