--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -1,36 +1,20 @@
 .container-hero{
-    display: grid;
-    width: 90%;
-    margin: auto;
-    grid-template-columns: repeat(5, auto);
-    grid-template-rows: repeat(3, .2fr);
+    display: flex;
+    flex-flow: row wrap;
+    gap: 5px;
     justify-content: center;
-
     position: absolute;
-    // margin-left: auto;
-    // margin-right: auto;
     top: 30%;
     left: 0;
     right: 0;
-    text-align: center;
-}
-.container-hero div{
-    text-align: center;
-}
-.social-hero{ grid-area: 1 / 1 / 2 / 3; }
-.titulo-hero{ grid-area: 2 / 1 / 3 / 3; }
-.button-hero{ grid-area: 3 / 1 / 4 / 3; }
-.image-hero { grid-area: 1 / 3 / 4 / 6; padding: 0 80px;}
 
-// Responsive
-@media only screen and (max-width: 600px) {
-    .container-hero{
-        display: grid;
-        grid-template-columns: repeat(2, auto);
-        grid-template-rows: repeat(3, .2fr);
-        justify-content: center;
-    }
-    .image-hero{
-        display: none;
+    .container-info{
+        text-align: center;
+        width: 450px;
+
+        .social-hero{
+            display: flex;
+            justify-content: center;
+        }
     }
 }
