--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -1,9 +1,25 @@
-.image-profile {
-    width: 100%;
-    height: auto;
-    max-width: 300px;
+.image-hero{
+    align-content: center;
+    background-color: #fff;
     border-radius: 50%;
-    // margin-top: 60px;
+    display: flex;
+    flex-flow: row wrap;
+    height: 350px;
+    justify-content: center;
+    text-align: center;
+    transform-style: preserve-3d;
+    transform: perspective(1000px);
+    width: 350px;
+}
+.image-profile-tilt{
+    transform: translateZ(20px);
+
+    .image-profile {
+        width: 100%;
+        height: auto;
+        max-width: 300px;
+        border-radius: 50%;
+    }
 }
 
 .img-trabajos {
@@ -21,9 +37,11 @@
 
     box-shadow: 15px 15px 5px $dark;
 }
+
 .image-web-service{
     max-width: 75%;
     margin: 5rem 0;
+    // filter: drop-shadow(5px 5px 10px $yellow-color);
 }
 
 .images-portfolio{
@@ -44,9 +62,6 @@
     }
 }
 @media only screen and (max-width: 600px) {
-    .image-profile {
-        display: none;
-    }
     .image-me{
         max-width: 80%;
     }
