--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -1,7 +1,5 @@
 /*FOOTER*/
 .footer-basic {
-  // position: absolute;
-  // bottom: 0;
   width: 100%;
     padding: 40px 0;
     background-color: $dark-bg ;
@@ -12,5 +10,10 @@
       font-size: 13px;
       color: $white-color;
       margin-bottom: 0;
+    }
+
+    .logo-footer{
+      text-align: center;
+      margin-bottom: 20px;
     }
 }
