--- a/scss/components/_tittles.scss
+++ b/scss/components/_tittles.scss
@@ -1,25 +1,31 @@
-h1 {
+// h1 {
+//     font-family: 'Anton', sans-serif;
+//     font-size: xx-large;
+//     color: $white-color;
+//     letter-spacing: 2px;
+//     margin-top: 100px;
+//     margin-bottom:  30px;
+//     text-align: center;
+// }
+.typewriter{
+    color: $white-color;
     font-family: 'Anton', sans-serif;
     font-size: xx-large;
-    color: $white-color;
     letter-spacing: 2px;
-    margin-top: 100px;
-    margin-bottom:  30px;
+    margin-bottom:  10px;
     text-align: center;
 }
-.typewriter{
-    margin-top: 30px;
-}
-
-h3 {
-    font-size: .9rem;
+h1{
     color: $white-color;
     font-family: 'Open Sans', sans-serif;
-    letter-spacing: 2px;
 }
 h2{
     color: $white-color;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Anton', sans-serif;
+    font-size: xx-large;
+    letter-spacing: 2px;
+    margin-bottom:  10px;
+    text-align: center;
 }
 
 p {
@@ -32,4 +38,10 @@ p {
 }
 .text-center{
     text-align: center;
+}
+
+@media only screen and (max-width: 600px) {
+    .typewriter{
+        margin-top: 0px;
+    }
 }
