--- a/scss/components/_trabajos.scss
+++ b/scss/components/_trabajos.scss
@@ -7,8 +7,10 @@
     p{
         margin: 0 20%;
     }
-    .h1-trabajos{
-        margin: 0;
+
+    a{
+        color: $yellow-color;
+        text-decoration: none;
     }
 }
 
