add sound and fixed the responsive

--- a/scss/components/_conocimientos.scss
+++ b/scss/components/_conocimientos.scss
@@ -5,6 +5,11 @@
   
   .knowledge-item img{
     width: 64px;
+
+    &:hover{
+      filter: grayscale(80%);
+      transition: 1s;
+    }
   }
 }
 
