Project directory changes

--- a/scss/components/_global-var.scss
+++ b/scss/components/_global-var.scss
@@ -1,8 +1,13 @@
 $yellow-color: #dfac13;
+$yellow-dark: #c49711;
 $white-color: #efefef;
 $dark-color: #212529;
 $dark-bg: #161a1d;
 $dark: #000;
+$grey-color: #c0c0c0;
+$green-color: #198754;
+$red-color: #c22d3c;
+$darkred-color: #a82633;
 
 // Fonts
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
