--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -3,36 +3,52 @@
     border: 2px solid $yellow-color;
     background-color: $dark-color;
     color: $white-color;
-    font-weight: 700;
-    font-family: 'Roboto', sans-serif;
-    padding: 10px 25px;
+    font-weight: 900;
+    font-family: 'Tahoma', sans-serif;
     letter-spacing: 1.5px;
+    padding: 10px 25px;
+    transition: all 0.5s;
 
     &:hover {
-        background-color: $yellow-color;
+        background-color: $white-color;
         border-radius: 0px; 
-        color: $dark-color;
+        border: 2px solid $white-color;
+        color: $dark;
         cursor: pointer;
-        font-weight: 700;
+        font-weight: bold;
+        transition: all 0.5s;
     }
 }
 .btn {
     background-color: $yellow-color;
     border-radius: 5px;
-    border: none;
+    border: 2px solid $yellow-color;
     color: $white-color;
-    font-weight: 700;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Tahoma', sans-serif;
+    font-weight: bold;
     padding: 10px 25px;
     letter-spacing: 2px;
+    transition: all 0.5s;
 
     &:hover {
+        background-color: $dark-color;
         border-radius: 0px; 
-        color: $dark-color;
+        border: 2px solid $white-color;
+        color: $white-color;
         cursor: pointer;   
-        font-weight: 900; 
+        font-weight: bold;
+        transition: all 0.5s;
     }
 }
 .btn-download{
     margin-bottom: 10%;
+}
+.btn-green{
+    background-color: $green-color;
+}
+.btn-red{
+    background-color: $red-color;
+}
+.btn-grey{
+    background-color: $grey-color;
 }
