--- a/scss/components/_conocimientos.scss
+++ b/scss/components/_conocimientos.scss
@@ -5,10 +5,12 @@
   
   .knowledge-item img{
     width: 64px;
+    transition: .2s;
 
     &:hover{
-      filter: grayscale(80%);
-      transition: 1s;
+      transform: scale(1.4);
+      transition: .2s;
+      filter: drop-shadow(0px 8px 2px $dark);
     }
   }
 }
