--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -1,66 +1,57 @@
-.form-input{
-    width: 90%;
-    height: 30px;
-    background-color: $dark-color;
-    border: 0;   
-    border-bottom: 1px solid $yellow-color;
-    color: $white-color;
-    margin: 20px 0;
-
-    &:focus{
-        outline: none;
-    }
-    &:valid{
-        color: $yellow-color;
-    }
-    &:invalid{
-        color: red;
-    }
-}
-.tittle-contact{
-    margin-top: 200px;
-}
-
-#sec-05{
-    width: 90%;
-    margin: 0 auto 200px auto;
-}
-//icono sobre
-.div-1{
-    i{
-        font-size: 10rem;
-        color: $yellow-color;
-        text-align: center;
-        margin-top: 20px;
-    }
-}
 .form-padre {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: .5fr;//repeat(2, 1fr);
-    grid-column-gap: 15px;
-    grid-row-gap: 15px;
+   display: flex;
+   flex-flow: row wrap;
+   justify-content: center;
+   gap: 30px;
+   margin-bottom: 80px;
 
-    .div-1 { grid-area: 1 / 1 / 3 / 2; }
-    .div-2 { grid-area: 1 / 2 / 3 / 3; }
+    .div-info{
+    text-align: center;
+        i{
+            color: $yellow-color;
+            font-size: 10rem;
+            margin-top: 20px;
+        }
+    }
+    .div-formulario{
+        text-align: center;
+
+        textarea{
+           resize: vertical; 
+           max-height: 120px;
+        }
+        .form-input{
+            background-color: $dark-color;
+            border: 0;   
+            border-bottom: 1px solid $yellow-color;
+            color: $white-color;
+            height: 30px;
+            margin: 20px 0;
+            width: 90%;
+        
+            &:focus{
+                outline: none;
+            }
+            &:valid{
+                color: $yellow-color;
+            }
+            &:invalid{
+                color: red;
+            }
+        }
+    }
 }
+
     
 @media only screen and (max-width: 600px) {
     .form-padre {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(2, 1fr);
-        grid-column-gap: 0px;
-        grid-row-gap: 0px;
-    
-        .div0-1 { grid-area: 1 / 1 / 2 / 2; }
-        .div0-2 { grid-area: 2 / 1 / 3 / 2; }
-    
-    }
-    .div-1{
-        i{
-            font-size: 5rem;
-        }
+         .div-info{
+             i{
+                 color: $yellow-color;
+                 font-size: 3rem;
+                 margin-top: 20px;
+             }
+         }
     }
 }  
 
