--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -1,34 +1,3 @@
-.image-hero{
-    align-content: center;
-    background-color: #fff;
-    border-radius: 50%;
-    display: flex;
-    flex-flow: row wrap;
-    height: 350px;
-    justify-content: center;
-    text-align: center;
-    transform-style: preserve-3d;
-    transform: perspective(1000px);
-    width: 350px;
-}
-.image-profile-tilt{
-    transform: translateZ(20px);
-
-    .image-profile {
-        width: 100%;
-        height: auto;
-        max-width: 300px;
-        border-radius: 50%;
-    }
-}
-
-.img-trabajos {
-    max-width: 500px;
-    width: 100%;
-    height: auto;
-    border-radius: 10px;
-    margin-top: 20px;
-}
 .image-me{
     border: 5px solid $white-color;
     box-shadow: 15px 15px 5px $dark;
@@ -38,39 +7,26 @@
     transition: 1s;
 
     &:hover{
-        filter: contrast(200%);
+        transform: rotate(-4deg);
         transition: 1s;
     }
 }
 
-.image-web-service{
-    max-width: 75%;
-    margin: 5rem 0;
-    //filter: drop-shadow(5px 5px 10px $yellow-color);
-}
-
-.images-portfolio{
-    display: flex;
-    flex-flow: row wrap;
-    gap: 30px;
-    justify-content: space-around;
-
-    div{
-        height:400px;
-        margin: auto;
-        width: 25%;
-        overflow-y: scroll;
-
-        img{
-            width: 100%;
-        }
-    }
-}
+// *Image poke
+.poke-img{
+    width: 80%;
+  }
+  
+  // *img website
+  .img-fluid{
+    width: 100%;
+    margin: auto;
+  }
 
 
 // logo-white
 .logo-white{
-    filter: drop-shadow(5px 5px 10px $dark);
+    // filter: drop-shadow(5px 5px 10px $dark);
     width: 100px;
 }
 
@@ -85,28 +41,5 @@
 
     .logo-white{
         width: 70px;
-    }
-    .images-portfolio{
-        width: 95%;
-        margin: auto;
-        gap: 60px;
-        div{
-            width: 100%;
-            height: 200px;
-        }
-    }
-    .image-hero{
-        margin-top: 10px;
-        width: 50%;
-        height: 120px;
-        // max-width: 100px;
-    }
-    .image-profile-tilt{
-        .image-profile {
-            width: 70%;
-            height: auto;
-            max-width: 300px;
-            border-radius: 50%;
-        }
     }
 }
