--- a/scss/components/_tittles.scss
+++ b/scss/components/_tittles.scss
@@ -13,10 +13,25 @@ h1{
 h2{
     color: $white-color;
     font-family: 'Anton', sans-serif;
-    font-size: xx-large;
     letter-spacing: 2px;
-    margin-bottom:  10px;
     text-align: center;
+}
+h3{
+    color: $dark;
+    font-family: 'Anton', sans-serif;
+    letter-spacing: 2px;
+}
+
+h4{
+    color: $white-color;
+    font-family: 'Open Sans', sans-serif;
+}
+h5{
+    color: $white-color;
+    font-family: 'Anton', sans-serif;
+    font-size: 1.5rem;
+    letter-spacing: 2px;
+    margin: 0;
 }
 
 p {
@@ -27,8 +42,9 @@ p {
 .titulo {
     margin-bottom: 20px;
 }
-.text-center{
-    text-align: center;
+.main-tittle{
+    font-size: 1.5rem;
+    margin-bottom:  60px;
 }
 
 @media only screen and (max-width: 600px), screen and (max-width: 768px) {
@@ -37,5 +53,9 @@ p {
     }
     p{
         font-size: 1.2rem;
+    }
+    .main-tittle{
+        font-size: 1.5rem;
+        padding: 0;
     }
 }
