--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -12,7 +12,7 @@
 @import "components/scroll";
 @import "components/trabajos";
 @import "components/gracias";
-@import "components/servicio";
+@import "components/container";
 
 
 *{
@@ -20,10 +20,10 @@
 }
 
 html, body {
-    // max-width: 90%;
-    overflow-x: hidden;
     background-color: $dark-color;
+    overflow-x: hidden;
     scroll-behavior: smooth;
+    margin: 0;
 }
 strong {
     color: $yellow-color;
@@ -47,17 +47,15 @@ strong {
     }
 }
 
-#hr_separation {
+a{
+    text-decoration: none;
+    // color: $yellow-color;
+}
+
+hr {
     border-color: $yellow-color;
     margin: 10% 0;
 }
 #hr_separation-sp {
     border-color: $yellow-color;
-}
-@media only screen and (max-width: 600px) {
-    .loading{
-        .txt-loading{
-            top: -100px;
-        }
-    }
 }
