Changes in type og information

--- a/scss/components/_sobremi.scss
+++ b/scss/components/_sobremi.scss
@@ -26,7 +26,8 @@
         width: 100%;
 
         .descip-div, .image-div{
-            width: 100%;
+            margin: auto;
+            width: 80%;
         }
     } 
     
