--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -19,6 +19,11 @@
         transition: all 0.5s;
     }
 }
+.show_code{
+    text-align: center; 
+    margin-bottom: 30px;
+}
+
 .btn {
     background-color: $yellow-color;
     border-radius: 5px;
