--- a/scss/components/_tittles.scss
+++ b/scss/components/_tittles.scss
@@ -9,6 +9,7 @@
 h1{
     color: $white-color;
     font-family: 'Open Sans', sans-serif;
+    font-size: 2.5rem;
 }
 h2{
     color: $white-color;
@@ -38,6 +39,10 @@ p {
     color: $white-color;
     font-family: 'Roboto', sans-serif;
     line-height: 130%;
+}
+.subtitulo{
+    text-align: center;
+    padding: 0 30px;
 }
 .titulo {
     margin-bottom: 20px;
