Fixed error in display js code

--- a/scss/components/_container.scss
+++ b/scss/components/_container.scss
@@ -78,11 +78,11 @@
 }
 
 //!Show codes
-.show{
-  display: none;
+.show_code__section{
+  display: flex;
 }
 .hide{
-  display: flex;
+  display: none;
 }
 
 
